# monitor

./: setup.cfg
monitor/: co2.py  errors.py  logging.py  monitor.py
scripts/: co2.py
systemd/: monitor@.service
