[metadata]
name = monitor
version = 0.1.0
description = Environmental monitoring tools for Raspberry Pi Zero W
author = Oscar Branson
author_email = ob266@cam.ac.uk
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pyserial>=3.0

[options.packages.find]
include = monitor*